...
                                            .resizable()
                                            //.imageScale(.medium)
                                            .foregroundStyle(.tint)
                                            .aspectRatio(contentMode: .fit)
                                            //.padding()
                                            .accessibilityLabel("\(name)")
                                            .accessibilityIdentifier("CurrentImage")
                                    } else {
                                        Image(systemName: "circle.dashed")
                                            .resizable()
                                            //.imageScale(.medium)
                                            .foregroundStyle(.tint)
                                            .aspectRatio(contentMode: .fit)
...
